--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -1,19 +1,81 @@
-{% extends "forms/base.html" %}
+{% extends "experimenter/base.html" %}
+{% block title %}
+    Experiment Session Detail
+{% endblock %}
+{% block page %}
+    <div id='page'>
+        <h3>{{ request.user.get_full_name }}</h3>
+        <div id="error-messages"></div>
+        <div id="session-detail" class="well well-small">
+            <h3>Experiment Session Detail:</h3>
+            <p><strong>Experiment: </strong>
+            {{ session_detail.experiment_metadata.title }}
+            <p><strong>Date/Time: </strong> {{ session_detail.start_date }}, {{ session_detail.start_time }} -
+            {% if session_detail.end_date != session_detail.start_date %}
+            {{ session_detail.end_date }},</p>
+            {% endif %}
+            {{ session_detail.end_time }}
+            <p><strong>Location: </strong> {{ session_detail.location }}</p>
+            <p><strong>Capacity: </strong> {{ session_detail.capacity }}</p>
+        </div>
+        <h3>List of Participants.</h3>
+        <form id="participant-info" data-bind="submit: onSave">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
+                <thead>
+                    <tr>
+                        <th> First Name </th>
+                        <th> Last Name </th>
+                        <th> Email </th>
+                        <th> Attendance </th>
+                    </tr>
+                </thead>
+                <tbody data-bind="foreach: participant_list">
+                    <tr>
+                        <td data-bind="text: first_name"></td>
+                        <td data-bind="text: last_name"></td>
+                        <td data-bind="text: email"></td>
+                        <td>
+                            <select name="session-attendance" data-bind="value: attendance">
+                                <option value="3">Select</option>
+                                <option value="0">Participated</option>
+                                <option value="1">Absent</option>
+                                <option value="2">Turned Away</option>
+                            </select>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <input type="submit" class="btn btn-success" value="Save" />
+        </form>
+    </div>
 
-{% block head %}
-{{ block.super }}
+{% endblock %}
+{% block javascript %}
+    {{ block.super }}
+    <script type="text/javascript" charset="utf8" src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+    <script type= "text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
 
-{% endblock head %}
+    <script type="text/javascript">
+        var participant_list = $.parseJSON("{{ participants | escapejs }}");
+        $(function(){
 
-{% block title %}Your Account{% endblock %}
+            function ExperimentListModel(participant_list) {
 
-{% block form %}
-<h3>{{ request.user.get_full_name }}</h3>
-<div id="error-messages"></div>
+                var model = ko.mapping.fromJS(participant_list);
 
-{% include "includes/bootstrap-form.html" %}
-<div class='controls'>
-    <button type='submit' id='submitForm' class='btn btn-primary'>Save</button>
-</div>
+                self.onSave = function(formElement) {
 
+                };
+                return model;
+            }
+
+            ko.applyBindings(new ExperimentListModel(participant_list))
+
+            $('#participant-table').dataTable( {
+                "sDom": "<'row'<'pull-right'f>r>t<'row'<'span6'i><'pull-right pagination'p>>",
+                "sWrapper": "dataTables_wrapper form-inline"
+            } );
+        } );
+
+    </script>
 {% endblock %}
