--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -59,7 +59,7 @@
                     <table>
                         <tr>
                             <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: averagePoints'></span></td>
-                            <td><i class='lighterprints-green icon-leaf icon-2x'></i></td>
+                            <td><i class='lighterprints-blue icon-leaf icon-2x'></i></td>
                         </tr>
                     </table>
                 </div>
@@ -396,7 +396,7 @@ $(function() {
     viewModel.progressChartData = ko.computed(function() {
         var avgPoints = Math.max(1, viewModel.averagePoints());
         var pointsToNextLevel = viewModel.pointsToNextLevel();
-        var data = [ { value: avgPoints, color: "#95CB29" } ]
+        var data = [ { value: avgPoints, color: "#13a5e6" } ]
         var pointsNeeded = Math.max(0, pointsToNextLevel - avgPoints);
         if (pointsNeeded > 0) {
             data.push({ value: pointsNeeded, color: "#D0D0D0" });
