finished update_participant_attendance() and can now successfully pass attendance data from session detail page, as well as update ParticipantSignup attendance field

--- a/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
+++ b/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
@@ -3,7 +3,7 @@
 Experiment Session Management
 {% endblock %}
 {% block page %}
-    <div class='row' id='page'>
+    <div id='page'>
         <div id="content" class="span12">
             <div class='info'>Welcome back, {{ request.user.first_name}}.</div>
             <div id="error-messages"></div>
