--- a/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
+++ b/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
@@ -3,14 +3,13 @@
 Experiment Session Management
 {% endblock %}
 {% block page %}
-    <div id='page'>
+    <div id='page' class="row">
         <div id="content" class="span12">
-            <div class='info'>Welcome back, {{ request.user.first_name}}.</div>
-            <div id="error-messages"></div>
-            <div class="page-header">
-                <h2>Manage your sessions</h2>
+            <div class="callout callout-info">
+                Welcome back, {{ request.user.get_full_name}}.
             </div>
-            <div class="tabbable"> <!-- Only required for left/right tabs -->
+            <div id="error-messages"></div>
+            <div class="tabbable">
                 <ul class='nav nav-tabs'>
                     <li class='active'><a href='#active' data-toggle='tab'><i class='icon-wrench'></i> Active sessions</a></li>
                     <li><a href='#past' data-toggle='tab'><i class='icon-archive'></i> Past sessions</a></li>
@@ -19,8 +18,14 @@ Experiment Session Management
                     <div class='tab-pane active' id="active">
                         <div data-bind='template: { name: "session-controller-template", foreach: activeSessions }'></div>
 
-                        <button data-bind="click: addSession" class="btn btn-primary">Add Session</button>
-                        <button data-bind="click: function() { $('#invite-form').slideDown('slow'); }, enable: ifSelectedSessions" class="btn btn-primary">Invite</button>
+                        <button data-bind="click: addSession" class="btn">
+                            <i class="icon-plus"></i>
+                            Add Session
+                        </button>
+                        <button data-bind="click: function() { $('#invite-form').slideDown('slow'); }, enable: ifSelectedSessions" class="btn btn-primary">
+                            <i class="icon-envelope"></i>
+                            Invite
+                        </button>
                     </div>
                     <div class='tab-pane' id="past">
                         <div data-bind='template: { name: "session-controller-template", foreach: pastSessions }'></div>
@@ -54,8 +59,6 @@ Experiment Session Management
                     </div>
                 </form>
             </div>
-        </div>
-        <div class="row">
             <div class="page-header">
                 <h3 style="display: inline"></h3>
                 <div class="pull-right form-inline">
@@ -72,8 +75,8 @@ Experiment Session Management
                     </div>
                 </div>
             </div>
+            <div id="calendar"></div>
         </div>
-        <div id="calendar"></div>
     </div>
 {% endblock page %}
 
@@ -103,7 +106,7 @@ Experiment Session Management
                                     </span>
                                 </td>
                                 <td>
-                                    <select class="span2" name="experiment_metadata_pk" data-bind="foreach: $root.experiment_metadata_group, value: selected_experiment_metadata_pk, enable: editable">
+                                    <select name="experiment_metadata_pk" data-bind="foreach: $root.experiment_metadata_group, value: selected_experiment_metadata_pk, enable: editable">
                                         <optgroup data-bind="attr: {label: label}, foreach: experiment_metadata_list">
                                             <option data-bind="text: title, value:pk"></option>
                                         </optgroup>
@@ -144,16 +147,22 @@ Experiment Session Management
                                 </td>
                                 <td data-bind="if: active">
                                     <span data-bind = "visible: editable" >
-                                        <input type="submit" class="btn btn-success" value="save" />
+                                        <button type="submit" class="btn btn-success">
+                                            <i class="icon-save"></i>
+                                            save
+                                        </button>
                                     </span>
                                     <span data-bind= "visible: !editable()" >
-                                        <input type="button" class="btn btn-success" data-bind="click: makeEditable" value="edit" />
+                                        <button class="btn btn-success" data-bind="click: makeEditable">
+                                            <i class="icon-edit"></i>
+                                            edit
+                                        </button>
                                     </span>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="text" name="location" class="span2" placeholder="Enter Location" data-bind='value: location, enable: editable' />
+                                    <input type="text" name="location" placeholder="Enter Location" data-bind='value: location, enable: editable' />
                                 </td>
                                 <td>
                                     <span class="label label-info session-label">End Date/Time: </span>
@@ -183,13 +192,16 @@ Experiment Session Management
                                     </select>
                                 </td>
                                 <td>
-                                    <span class="label label-info session-label">Invites: </span>
+                                    <span class="label label-info session-label">Invites sent: </span>
                                 </td>
                                 <td>
                                     <span class="badge invite-badge" data-bind="text: invitesSent">0</span>
                                 </td>
                                 <td data-bind="if: active">
-                                    <input type="button" class="btn btn-danger" value="Remove" data-bind="click: $root.removeSession" />
+                                    <button class="btn btn-danger" data-bind="click: $root.removeSession">
+                                        <i class="icon-trash"></i>
+                                        remove
+                                    </button>
                                 </td>
                             </tr>
                         </tbody>
@@ -262,8 +274,9 @@ Experiment Session Management
                     var formData;
 
                     if(formElement.elements["start_date"].value > formElement.elements["end_date"].value){
-                       alert("ERROR: End date cannot be earlier than the Start date. Please choose a later end date.");
-                    }else
+                        alert("ERROR: End date cannot be earlier than the Start date. Please choose a later end date.");
+                        return;
+                    }
                     if(formElement.elements["pk"].value == -1){
                         formData = $(formElement).serialize()  + '&request_type=create';
                     } else {
@@ -273,9 +286,16 @@ Experiment Session Management
                         data: formData,
                         type: "POST",
                         success: function(result) {
-                            self.pk(result.session.pk);
-                            self.editable(false);
-                            calendar = makeCalendar();
+                            if(result.success) {
+                                self.pk(result.session.pk);
+                                self.editable(false);
+                                calendar = makeCalendar();
+                            } else {
+                                $("#error-messages").html('<div class="alert alert-danger"><strong></strong></div>');
+                                for(index in result.message.__all__) {
+                                    $("#error-messages .alert strong").append(result.message.__all__[index]);
+                                }
+                            }
                         }
                     });
                 };
