--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -4,9 +4,11 @@
 {% endblock %}
 {% block page %}
     <div id='page'>
-        <h3>{{ request.user.get_full_name }}</h3>
+        <div class="callout callout-info">
+            Welcome back, {{ request.user.get_full_name}}.
+        </div>
         <div id="error-messages"></div>
-        <div id="session-detail" class="well well-small">
+        <div id="session-detail" class="callout callout-warning">
             <h3>Experiment Session Detail:</h3>
             <p><strong>Experiment: </strong>
             {{ session_detail.experiment_metadata.title }}
@@ -18,7 +20,8 @@
             <p><strong>Location: </strong> {{ session_detail.location }}</p>
             <p><strong>Capacity: </strong> {{ session_detail.capacity }}</p>
         </div>
-        <h3>List of Participants.</h3>
+
+        <h3>List of Participants attending Experiment Session.</h3>
         <form id="participant-info" data-bind="submit: onSave">
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
                 <thead>
@@ -26,6 +29,8 @@
                         <th> First Name </th>
                         <th> Last Name </th>
                         <th> Email </th>
+                        <th> Major </th>
+                        <th> Class Status </th>
                         <th> Attendance </th>
                     </tr>
                 </thead>
@@ -35,6 +40,8 @@
                         <td data-bind="text: first_name"></td>
                         <td data-bind="text: last_name"></td>
                         <td data-bind="text: email"></td>
+                        <td data-bind="text: major"></td>
+                        <td data-bind="text: class_status"></td>
                         <td>
                             <select name="session-attendance" data-bind="value: attendance">
                                 <option value="3">Select</option>
@@ -46,7 +53,10 @@
                     </tr>
                 </tbody>
             </table>
-            <input type="submit" class="btn btn-success" value="Save" />
+            <button type="submit" class="btn btn-success">
+                <i class="icon-save"></i>
+                save
+            </button>
         </form>
     </div>
 
@@ -85,10 +95,105 @@
 
             ko.applyBindings(new ExperimentListModel(participant_list))
 
+
+            /* API method to get paging information */
+            $.fn.dataTableExt.oApi.fnPagingInfo = function ( oSettings ) {
+                return {
+                    "iStart":         oSettings._iDisplayStart,
+                    "iEnd":           oSettings.fnDisplayEnd(),
+                    "iLength":        oSettings._iDisplayLength,
+                    "iTotal":         oSettings.fnRecordsTotal(),
+                    "iFilteredTotal": oSettings.fnRecordsDisplay(),
+                    "iPage":          oSettings._iDisplayLength === -1 ?
+                        0 : Math.ceil( oSettings._iDisplayStart / oSettings._iDisplayLength ),
+                    "iTotalPages":    oSettings._iDisplayLength === -1 ?
+                        0 : Math.ceil( oSettings.fnRecordsDisplay() / oSettings._iDisplayLength )
+                };
+            };
+
+            /* Bootstrap style pagination control */
+            $.extend( $.fn.dataTableExt.oPagination, {
+                "bootstrap": {
+                    "fnInit": function( oSettings, nPaging, fnDraw ) {
+                        var oLang = oSettings.oLanguage.oPaginate;
+                        var fnClickHandler = function ( e ) {
+                            e.preventDefault();
+                            if ( oSettings.oApi._fnPageChange(oSettings, e.data.action) ) {
+                                fnDraw( oSettings );
+                            }
+                        };
+
+                        $(nPaging).addClass('pagination').append(
+                            '<ul>'+
+                                '<li class="prev disabled"><a href="#">&larr; '+oLang.sPrevious+'</a></li>'+
+                                '<li class="next disabled"><a href="#">'+oLang.sNext+' &rarr; </a></li>'+
+                            '</ul>'
+                        );
+                        var els = $('a', nPaging);
+                        $(els[0]).bind( 'click.DT', { action: "previous" }, fnClickHandler );
+                        $(els[1]).bind( 'click.DT', { action: "next" }, fnClickHandler );
+                    },
+
+                    "fnUpdate": function ( oSettings, fnDraw ) {
+                        var iListLength = 5;
+                        var oPaging = oSettings.oInstance.fnPagingInfo();
+                        var an = oSettings.aanFeatures.p;
+                        var i, ien, j, sClass, iStart, iEnd, iHalf=Math.floor(iListLength/2);
+
+                        if ( oPaging.iTotalPages < iListLength) {
+                            iStart = 1;
+                            iEnd = oPaging.iTotalPages;
+                        }
+                        else if ( oPaging.iPage <= iHalf ) {
+                            iStart = 1;
+                            iEnd = iListLength;
+                        } else if ( oPaging.iPage >= (oPaging.iTotalPages-iHalf) ) {
+                            iStart = oPaging.iTotalPages - iListLength + 1;
+                            iEnd = oPaging.iTotalPages;
+                        } else {
+                            iStart = oPaging.iPage - iHalf + 1;
+                            iEnd = iStart + iListLength - 1;
+                        }
+
+                        for ( i=0, ien=an.length ; i<ien ; i++ ) {
+                            // Remove the middle elements
+                            $('li:gt(0)', an[i]).filter(':not(:last)').remove();
+
+                            // Add the new list items and their event handlers
+                            for ( j=iStart ; j<=iEnd ; j++ ) {
+                                sClass = (j==oPaging.iPage+1) ? 'class="active"' : '';
+                                $('<li '+sClass+'><a href="#">'+j+'</a></li>')
+                                    .insertBefore( $('li:last', an[i])[0] )
+                                    .bind('click', function (e) {
+                                        e.preventDefault();
+                                        oSettings._iDisplayStart = (parseInt($('a', this).text(),10)-1) * oPaging.iLength;
+                                        fnDraw( oSettings );
+                                    } );
+                            }
+
+                            // Add / remove disabled classes from the static elements
+                            if ( oPaging.iPage === 0 ) {
+                                $('li:first', an[i]).addClass('disabled');
+                            } else {
+                                $('li:first', an[i]).removeClass('disabled');
+                            }
+
+                            if ( oPaging.iPage === oPaging.iTotalPages-1 || oPaging.iTotalPages === 0 ) {
+                                $('li:last', an[i]).addClass('disabled');
+                            } else {
+                                $('li:last', an[i]).removeClass('disabled');
+                            }
+                        }
+                    }
+                }
+            } );
+
             $('#participant-table').dataTable( {
                 "sDom": "<'row'<'pull-right'f>r>t<'row'<'span6'i><'pull-right pagination'p>>",
-                "sWrapper": "dataTables_wrapper form-inline"
+                "sWrapper": "dataTables_wrapper form-inline",
+                "sPaginationType": "bootstrap"
             } );
+
         } );
 
     </script>
